; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_cmd_kill.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_cmd_kill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.skynet_context*, i8*)* @cmd_kill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cmd_kill(%struct.skynet_context* %0, i8* %1) #0 {
  %3 = alloca %struct.skynet_context*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store %struct.skynet_context* %0, %struct.skynet_context** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i64 @tohandle(%struct.skynet_context* %6, i8* %7)
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i32 @handle_exit(%struct.skynet_context* %12, i64 %13)
  br label %15

15:                                               ; preds = %11, %2
  ret i8* null
}

declare dso_local i64 @tohandle(%struct.skynet_context*, i8*) #1

declare dso_local i32 @handle_exit(%struct.skynet_context*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
